# dress

./: .gitignore  README.md  conda_env.yml  conda_env_p311.yml  conda_env_p312.yml  pyproject.toml  requirements.txt  test_config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_tests.yml
dress/: cli.py
dress/configs/: generate.yaml  generate_binfiller.yaml  generate_binfiller_pwm_grammar.yaml  generate_iad.yaml  generate_iad_pwm_grammar.yaml
dress/datasetevaluation/: evaluation.py  json_schema.py  run.py  validate_args.py
dress/datasetevaluation/off_the_shelf/: classification.py  clustering.py  dimensionality_reduction.py
dress/datasetexplanation/: config_evalution.py  config_evolution.py  custom_callbacks.py  custom_fitness.py  custom_stopping.py  evolution.py  json_schema.py  motif_db.py  run.py  validate_args.py
dress/datasetfiltering/: filtering.py  run.py  validate_args.py
dress/datasetgeneration/: archive.py  config_evolution.py  custom_callbacks.py  custom_fitness.py  custom_population_evaluators.py  custom_steps.py  custom_stopping.py  dataset.py  evolution.py  json_schema.py  logger.py  os_utils.py  run.py  validate_args.py
dress/utils/: calculate_combinatorial_complexity.py
tests/: archive_test.py  black_box_test.py  custom_mutation_operator_test.py  grammar_test.py  motif_grammar_test.py  phenotype_operations_test.py  preprocessing_raw_test.py  prune_archive_test.py  pwm_grammar_test.py  random_grammar_test.py  shuffle_test.py
tests/data/: dataset_original_seq.csv  raw_data.tsv
(+34 files in other folders)
